--- a/src/NLogCentral.Web/Views/master.cshtml
+++ b/src/NLogCentral.Web/Views/master.cshtml
@@ -223,6 +223,8 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+    
+    @RenderSection("Footer")
 
 </body>
 
